@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*buildkernel-b2-1.0.3 (24 Jan 2015)
+
+  24 Jan 2015; sakaki <sakaki@deciban.com> +buildkernel-b2-1.0.3.ebuild:
+  Fix itb backup problem
+
 *buildkernel-b2-1.0.2 (23 Jan 2015)
 
   23 Jan 2015; sakaki <sakaki@deciban.com> +buildkernel-b2-1.0.2.ebuild:
